Fix some mobile font and padding issues

--- a/source/index.haml
+++ b/source/index.haml
@@ -1,9 +1,9 @@
-%div#wrapper
+%div#wrapper.center
   -# %iframe#vr-iframe.background{:allowfullscreen => "", :style => "display: none;",
     :frameborder => "0", :height => "100%", :width => "100%",
     :src => "//storage.googleapis.com/vrview/index.html?image=//storage.googleapis.com/vrview/examples/coral.jpg&is_stereo=true"}
     #background-cover
-  %section.center
+  %section
     %span
       Oh, hello there! :)
   %p
