--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,7 +8,7 @@
     <meta name="viewport" content="initial-scale=1">
 
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "The Middleman" %></title>
+    <title>vr.cwervo.com !</title>
 
     <%= stylesheet_link_tag "normalize", "all" %>
     <%= javascript_include_tag  "all" %>
