--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,6 +9,13 @@
 
     <!-- Use title if it's in the page YAML frontmatter -->
     <title>vr.cwervo.com !</title>
+    <meta property="og:url"                content="<% current_page.url %>" />
+    <meta property="og:type"               content="article" />
+    <meta property="og:title"              content="VR . CWERVO . COM" />
+    <meta property="og:description"        content="A collection of VR experiences." />
+    <meta property="og:image"              content="/images/big-logo.png" />
+
+<meta property="og:site_name" content="Cwervo.com - Thoughts Blog">
 
     <%= stylesheet_link_tag "normalize", "all" %>
     <%= javascript_include_tag  "all" %>
