--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,7 +9,7 @@
 
     <!-- Use title if it's in the page YAML frontmatter -->
     <title>vr.cwervo.com !</title>
-    <meta property="og:url"                content="<% current_page.url %>" />
+    <meta property="og:url"                content="http://cwervo.com" />
     <meta property="og:type"               content="article" />
     <meta property="og:title"              content="VR . CWERVO . COM" />
     <meta property="og:description"        content="A collection of VR experiences." />
