Add index bg attribution note

--- a/source/index.haml
+++ b/source/index.haml
@@ -27,6 +27,11 @@
       %li
         %a{:href=>"http://andrescuervo.github.io/vrview/?image=images/sf_party_house.jpg"}
           Some house in San Francisco
+  %p
+    %i
+      Note: the background of this page is borrowed from
+      %a{ :href => "https://threejs.org/examples/misc_controls_deviceorientation.html" }
+        this Three.js demo.
 
 %div#container
 
