Add a little margin to the entire page for readability

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -112,6 +112,7 @@ section {
 @media (min-width: 500px) {
     #wrapper {
         font-size: 20pt;
+        margin: 1.25em;
         // $side-margins: 15%;
         // margin-left: $side-margins;
         // margin-right: $side-margins;
