Add new VR photos and videos (see list below)
- staircase-illusion.jpg
- flooded-room.jpg
- blurry_snek.mp4
- doggonado.mp4

--- a/source/index.haml
+++ b/source/index.haml
@@ -9,8 +9,37 @@
   %p
     Here are some links to other VR things I've done:
     %ul.vr_list
+
       %li
-        %a.link{:href=>"http://andrescuervo.github.io/vrview/?image=images/oberlin/tappan/tappan1.1.jpg"}
+        %a{:href=>"http://andrescuervo.github.io/vrview/?image=images/2017/january8and9/staircase-illusion.jpg"}
+          A staircase illusion
+        %br
+        %div.source-link
+          (Taken from
+          %a{:href=>"https://www.facebook.com/closetheinternet/"}
+            Ｃｌｏｓｅ ｔｈｅ Ｉｎｔｅｒｎｅｔ
+          )
+      %li
+        %a{:href=>"http://andrescuervo.github.io/vrview/?image=images/2017/january8and9/flooded-room.jpg"}
+          A flooded room
+        %br
+        %div.source-link
+          (Taken from
+          %a{:href=>"https://www.facebook.com/closetheinternet/"}
+            Ｃｌｏｓｅ ｔｈｅ Ｉｎｔｅｒｎｅｔ
+          )
+      %li
+        I call this one
+        %a{:href=>"http://andrescuervo.github.io/vrview/?video=images/2017/january8and9/doggonado.mp4"}
+          doggonado
+      %li
+        %a{:href=>"http://andrescuervo.github.io/vrview/?video=images/2017/january8and9/blurry_snek.mp4"}
+          A blurry little snek
+      %li
+        %a{:href=>"http://andrescuervo.github.io/vrview/?image=images/oberlin/tappan/tappan1.1.jpg"}
+          Oberlin College's Tappan Square
+      %li
+        %a{:href=>"http://andrescuervo.github.io/vrview/?image=images/oberlin/tappan/tappan1.1.jpg"}
           Oberlin College's Tappan Square
       %li
         %a{:href=>"http://andrescuervo.github.io/vrview/?image=images/sage_and_christy_show_11_2_16.jpg"}
@@ -31,7 +60,7 @@
     %i
       Note: the background of this page is borrowed from
       %a{ :href => "https://threejs.org/examples/misc_controls_deviceorientation.html" }
-        this Three.js demo.
+        this Three.js demo
 
 %div#container
 
