--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -163,3 +163,14 @@ section {
         }
     }
 }
+
+
+.source-link {
+    margin-top: 1em;
+    font-size: 0.65em;
+    color: #999;
+
+    a {
+        color: #ddd;
+    }
+}
