Move link outside VR image link

--- a/source/index.haml
+++ b/source/index.haml
@@ -36,8 +36,12 @@
         %a{:href=>"http://andrescuervo.github.io/vrview/?video=images/2017/january8and9/blurry_snek.mp4"}
           A blurry little snek
       %li
+        A photo from the
+        %a{:href=>"https://archive.org/index.php"}
+          Internet Archive
+        headquarters'
         %a{:href=>"http://andrescuervo.github.io/vrview/?image=images/2017/january8and9/internet-archive-center-of-great-room.jpg"}
-          A photo from the [Internet Archive](https://archive.org/index.php) headquarters' Great Room :)
+          Great Room :)
       %li
         %a{:href=>"http://andrescuervo.github.io/vrview/?image=images/oberlin/tappan/tappan1.1.jpg"}
           Oberlin College's Tappan Square
