Remove old vrview, fix links for GH hosting

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -15,9 +15,10 @@
     <meta property="og:description"        content="A collection of VR experiences." />
     <meta property="og:image"              content="/images/big-logo.png" />
 
-<meta property="og:site_name" content="Cwervo.com - Thoughts Blog">
+<meta property="og:site_name" content="vr.cwervo.com">
 
     <%= stylesheet_link_tag "normalize", "all" %>
+    <script src="https://aframe.io/releases/0.4.0/aframe.min.js"></script>
     <%= javascript_include_tag  "all" %>
   </head>
 
