Add some panoramas and download aframe-0.4.0

--- a/source/index.haml
+++ b/source/index.haml
@@ -11,6 +11,10 @@
     %ul.vr_list
 
       %li
+        %a{:href=>"/panoramas/womens-march/"}
+          Women's March SF
+        (01/21/17)
+      %li
         %a{:href=>"http://andrescuervo.github.io/vrview/?image=images/2017/january8and9/staircase-illusion.jpg"}
           A staircase illusion
         %br
@@ -63,13 +67,7 @@
       %li
         %a{:href=>"http://andrescuervo.github.io/vrview/?image=images/sf_party_house.jpg"}
           Some house in San Francisco
-  %p
-    %i
-      Note: the background of this page is borrowed from
-      %a{ :href => "https://threejs.org/examples/misc_controls_deviceorientation.html" }
-        this Three.js demo
-
-:plain
+  :plain
   <a-scene>
     <a-sky src="https://threejs.org/examples/textures/2294472375_24a3b8ef46_o.jpg"></a-sky>
   </a-scene>
