--- a/source/index.haml
+++ b/source/index.haml
@@ -67,9 +67,9 @@
       %li
         %a{:href=>"http://andrescuervo.github.io/vrview/?image=images/sf_party_house.jpg"}
           Some house in San Francisco
-  :plain
+:plain
   <a-scene>
-    <a-sky src="https://threejs.org/examples/textures/2294472375_24a3b8ef46_o.jpg"></a-sky>
+    <a-sky src="/images/panoramas/abandoned-room.jpg"></a-sky>
   </a-scene>
 
 -# TODO: Replace all of this with the much more accessible, interesting A-Frame sky approach!
