Fix FB metadata for sharing!

--- a/source/index.haml
+++ b/source/index.haml
@@ -11,6 +11,13 @@
     %ul.vr_list
 
       %li
+        %a{:href=>"panoramas/sf-moma/the-statue/"}
+          The statue at the middle of the SF MOMA lobby,
+          %i
+            Sequence
+          by Richard Serra.
+        (01/22/17)
+      %li
         %a{:href=>"/panoramas/womens-march/"}
           Women's March SF
         (01/21/17)
