Commit tests and some capstone changes

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -100,12 +100,13 @@ body {
 }
 
 section {
-    // background-color: rgba(0, 0, 0, 0.2);
     max-width: 90%;
     display: inline-block;
 }
 
 .center {
+    max-width: 90%;
+    display: inline-block;
     text-align: center;
 }
 
